--- a/AUTHORS
+++ b/AUTHORS
@@ -1,19 +1,20 @@
-Audacious (C) GPL 2005-2008
+Audacious (C) GPL 2005-2009
 
 Authors listed alphabetically, by last name:
 --------------------------------------------
 
 George Averill <nhjm449@gmail.com>
+Kieran Clancy <clancy.kieran+audacious@gmail.com>
 Michael Färber <0102@gmx.at>
 Matti Hämäläinen <ccr@tnsp.org>
 Giacomo Lozito <james@develia.org>
-William Pitcock <nenolod@nenolod.net>
+Tomasz Moń <desowin@gmail.com>
+William Pitcock <nenolod@sacredspiral.co.uk>
 Derek Pomery <nemo@m8y.org>
 Mohammed Sameer <msameer@foolab.org>
 Jonathan Schleifer <js-audacious@webkeks.org>
-Andrew O. Shadoura <bugzilla@tut.by>
-Aaron Sheldon <asheldon at uiuc.edu>
 Stephen Sokolow <deitarion@gmail.com>
+Ben Tucker <ben@tucker.org>
 Tony Vroon <chainsaw@gentoo.org>
 Yoshiki Yazawa <yaz@cc.or.rim.jp>
 
@@ -21,7 +22,7 @@ Translators
 -----------
 
 Dutch              - Tony Vroon
-Hungarian          - Laszlo Dvornik
+Hungarian          - Dvornik László
 German             - Michael Hanselmann
                      Matthias Debus
 Greek              - Kouzinopoulos Haris
@@ -29,6 +30,8 @@ Greek              - Kouzinopoulos Haris
                      Stathis Kamperis
 Italian            - Diego Petteno
 Japanese           - Dai
+Finnish            - Pauli Virtanen
+                     Matti Hämäläinen
 
 -
 
@@ -89,7 +92,7 @@ Greek                - Kouzinopoulos Haris <haris@mpa.gr>
 Finnish              - Pauli Virtanen <pauli.virtanen@hut.fi>
 French               - David Le Brun <david@dyn-ns.net>
 Hindi                - Dhananjaya Sharma <dysxhi@yahoo.co.in>
-Hungarian            - Laszlo Dvornik <dvornik@gnome.hu>
+Hungarian            - Dvornik László <dvornik@gnome.hu>
 Italian              - Alessio D'Ascanio <otaku@fastwebnet.it>
 Japanese             - Takeshi Aihana <aihana@gnome.gr.jp>
 Korean               - DongCheon Park <dcpark@kaist.ac.kr>
