--- a/po/lv.po
+++ b/po/lv.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: audacious-plugins2_22062009\n"
 "Report-Msgid-Bugs-To: http://jira.atheme.org/\n"
 "POT-Creation-Date: 2011-06-10 18:30+0200\n"
-"PO-Revision-Date: 2011-03-02 01:41+0200\n"
+"PO-Revision-Date: 2011-06-27 04:01+0300\n"
 "Last-Translator: Einars Sprugis <einars8@gmail.com>\n"
 "Language-Team: Latvian <kde-i18n-doc@kde.org>\n"
 "Language: lv\n"
@@ -1389,9 +1389,8 @@ msgid "Custom title"
 msgstr "Pielāgots nosaukums"
 
 #: src/gtkui/columns.c:39
-#, fuzzy
 msgid "Bitrate"
-msgstr "Bitātrums (kbps):"
+msgstr "Bitātrums"
 
 #: src/gtkui/columns.c:286
 msgid "Choose Columns"
@@ -1430,280 +1429,232 @@ msgid "Disable"
 msgstr "Atslēgt"
 
 #: src/gtkui/menus.c:132
-#, fuzzy
 msgid "_Open Files ..."
-msgstr "Atvērt failus ..."
+msgstr "Atvērt _failus ..."
 
 #: src/gtkui/menus.c:133
-#, fuzzy
 msgid "Open _URL ..."
-msgstr "Atvērt URL ..."
+msgstr "Atvērt _URL ..."
 
 #: src/gtkui/menus.c:134
-#, fuzzy
 msgid "_Add File ..."
-msgstr "Pievienot failus ..."
+msgstr "_Pievienot failus ..."
 
 #: src/gtkui/menus.c:135
-#, fuzzy
 msgid "Add U_RL ..."
-msgstr "Pievienot URL ..."
+msgstr "Pievienot U_RL ..."
 
 #: src/gtkui/menus.c:137
-#, fuzzy
 msgid "A_bout ..."
-msgstr "Par"
+msgstr "_Par ..."
 
 #: src/gtkui/menus.c:138
-#, fuzzy
 msgid "_Preferences ..."
-msgstr "Iestatījumi"
+msgstr "_Iestatījumi ..."
 
 #: src/gtkui/menus.c:139 src/skins/ui_manager.c:412
 msgid "_Quit"
 msgstr "I_ziet"
 
 #: src/gtkui/menus.c:142
-#, fuzzy
 msgid "_Play"
-msgstr "Atskaņot"
+msgstr "A_tskaņot"
 
 #: src/gtkui/menus.c:143
-#, fuzzy
 msgid "Paus_e"
-msgstr "Pauze"
+msgstr "Pauz_e"
 
 #: src/gtkui/menus.c:144
-#, fuzzy
 msgid "_Stop"
-msgstr "Stop"
+msgstr "_Stop"
 
 #: src/gtkui/menus.c:145
-#, fuzzy
 msgid "Pre_vious"
-msgstr "Iepriekšējais"
+msgstr "_Iepriekšējais"
 
 #: src/gtkui/menus.c:146
-#, fuzzy
 msgid "_Next"
-msgstr "Nākamais"
+msgstr "_Nākamais"
 
 #: src/gtkui/menus.c:148
-#, fuzzy
 msgid "_Repeat"
-msgstr "Atkārtot"
+msgstr "_Atkārtot"
 
 #: src/gtkui/menus.c:149
-#, fuzzy
 msgid "S_huffle"
-msgstr "Jaukt"
+msgstr "_Jaukt"
 
 #: src/gtkui/menus.c:150
-#, fuzzy
 msgid "N_o Playlist Advance"
-msgstr "Nevirzīties uz priekšu repertuārā"
+msgstr "Ne_virzīties uz priekšu repertuārā"
 
 #: src/gtkui/menus.c:151
-#, fuzzy
 msgid "Stop _After This Song"
-msgstr "Aptur pēc pašreizējās dziesmas."
+msgstr "Apt_urēt pēc pašreizējās dziesmas"
 
 #: src/gtkui/menus.c:153 src/gtkui/menus.c:210
 msgid "Song _Info ..."
-msgstr ""
+msgstr "Dziesmas _info ..."
 
 #: src/gtkui/menus.c:154
-#, fuzzy
 msgid "Jump to _Time ..."
-msgstr "Pāriet uz laiku"
+msgstr "Pāriet uz _laiku ..."
 
 #: src/gtkui/menus.c:155
 msgid "_Jump to Song ..."
-msgstr ""
+msgstr "Pāriet uz _dziesmu ..."
 
 #: src/gtkui/menus.c:158
-#, fuzzy
 msgid "By Track _Number"
-msgstr "Pēc celiņa numura"
+msgstr "Pēc celiņa _numura"
 
 #: src/gtkui/menus.c:159
-#, fuzzy
 msgid "By _Title"
-msgstr "Pēc nosaukuma"
+msgstr "Pēc n_osaukuma"
 
 #: src/gtkui/menus.c:160
-#, fuzzy
 msgid "By _Artist"
-msgstr "Pēc izpildītāja"
+msgstr "Pēc _izpildītāja"
 
 #: src/gtkui/menus.c:161
-#, fuzzy
 msgid "By A_lbum"
-msgstr "Pēc albuma"
+msgstr "Pēc a_lbuma"
 
 #: src/gtkui/menus.c:162
-#, fuzzy
 msgid "By Release _Date"
-msgstr "Pēc izlaiduma datuma"
+msgstr "Pēc izlaišanas _datuma"
 
 #: src/gtkui/menus.c:163
-#, fuzzy
 msgid "By _File Path"
-msgstr "Pēc faila ceļa"
+msgstr "Pēc _faila ceļa"
 
 #: src/gtkui/menus.c:164
-#, fuzzy
 msgid "By _Custom Title"
-msgstr "Pielāgots nosaukums"
+msgstr "Pēc _pielāgota nosaukuma"
 
 #: src/gtkui/menus.c:166
-#, fuzzy
 msgid "R_everse Order"
-msgstr "Apgrieztā kārtībā"
+msgstr "Apgri_eztā kārtībā"
 
 #: src/gtkui/menus.c:167
-#, fuzzy
 msgid "_Random Order"
-msgstr "Nejaušā kārtībā"
+msgstr "Nejaušā _kārtībā"
 
 #: src/gtkui/menus.c:170 src/gtkui/menus.c:212
 msgid "_Refresh"
 msgstr "A_tsvaidzināt"
 
 #: src/gtkui/menus.c:172
-#, fuzzy
 msgid "_Sort"
-msgstr "Kārtot"
+msgstr "_Kārtot"
 
 #: src/gtkui/menus.c:174
 msgid "_New"
-msgstr ""
+msgstr "_Jauns"
 
 #: src/gtkui/menus.c:175
 msgid "_Close"
 msgstr "Ai_zvērt"
 
 #: src/gtkui/menus.c:177
-#, fuzzy
 msgid "_Import ..."
-msgstr "Importēt"
+msgstr "_Importēt ..."
 
 #: src/gtkui/menus.c:178
-#, fuzzy
 msgid "_Export ..."
-msgstr "Export"
+msgstr "_Eksportēt ..."
 
 #: src/gtkui/menus.c:180
-#, fuzzy
 msgid "_Playlist Manager ..."
-msgstr "Repertuāru pārvaldnieks"
+msgstr "_Repertuāru pārvaldnieks ..."
 
 #: src/gtkui/menus.c:183
-#, fuzzy
 msgid "Volume _Up"
-msgstr "Palielināt skaļumu"
+msgstr "_Palielināt skaļumu"
 
 #: src/gtkui/menus.c:184
-#, fuzzy
 msgid "Volume _Down"
-msgstr "Samazināt skaļumu"
+msgstr "_Samazināt skaļumu"
 
 #: src/gtkui/menus.c:186
-#, fuzzy
 msgid "_Equalizer"
-msgstr "Balansieris"
+msgstr "_Balansieris"
 
 #: src/gtkui/menus.c:188
-#, fuzzy
 msgid "E_ffects"
-msgstr "Efekti"
+msgstr "E_fekti"
 
 #: src/gtkui/menus.c:191
-#, fuzzy
 msgid "_Interface"
-msgstr "Saskarne"
+msgstr "S_askarne"
 
 #: src/gtkui/menus.c:193
 msgid "Show _Menu Bar"
-msgstr ""
+msgstr "Rādīt _izvēlnes joslu"
 
 #: src/gtkui/menus.c:194
-#, fuzzy
 msgid "Show I_nfo Bar"
-msgstr "Rādīt infoapgabalu"
+msgstr "Rādīt i_nfoapgabalu"
 
 #: src/gtkui/menus.c:195
-#, fuzzy
 msgid "Show _Status Bar"
-msgstr "Rādīt stāvokļjoslu"
+msgstr "Rādīt _stāvokļjoslu"
 
 #: src/gtkui/menus.c:197
-#, fuzzy
 msgid "Show Column _Headers"
-msgstr "Rādīt kolonnu galvenes"
+msgstr "Rādīt kolonnu _galvenes"
 
 #: src/gtkui/menus.c:198
-#, fuzzy
 msgid "Choose _Columns ..."
-msgstr "Izvēlēties kolonnas ..."
+msgstr "Izvēlēties _kolonnas ..."
 
 #: src/gtkui/menus.c:199
-#, fuzzy
 msgid "Scrol_l on Song Change"
-msgstr "Dziesmas maiņa"
+msgstr "Ritināt, _dziesmām mainoties"
 
 #: src/gtkui/menus.c:202
-#, fuzzy
 msgid "_File"
-msgstr "Fails"
+msgstr "_Fails"
 
 #: src/gtkui/menus.c:203
-#, fuzzy
 msgid "_Playback"
-msgstr "Atskaņošana"
+msgstr "_Atskaņošana"
 
 #: src/gtkui/menus.c:204
-#, fuzzy
 msgid "P_laylist"
-msgstr "Repertuārs"
+msgstr "_Repertuārs"
 
 #: src/gtkui/menus.c:205 src/gtkui/menus.c:223
-#, fuzzy
 msgid "_Services"
-msgstr "Ierīces"
+msgstr "_Servisi"
 
 #: src/gtkui/menus.c:206
-#, fuzzy
 msgid "_Output"
-msgstr "Izvade"
+msgstr "I_zvade"
 
 #: src/gtkui/menus.c:207
-#, fuzzy
 msgid "_View"
-msgstr "Skatīt"
+msgstr "S_kats"
 
 #: src/gtkui/menus.c:211
 msgid "_Queue/Unqueue"
-msgstr ""
+msgstr "Ie_rindot/Izņ. no rindas"
 
 #: src/gtkui/menus.c:214
 msgid "Cu_t"
-msgstr ""
+msgstr "_Izgriezt"
 
 #: src/gtkui/menus.c:215
-#, fuzzy
 msgid "_Copy"
-msgstr "Kopēt"
+msgstr "_Kopēt"
 
 #: src/gtkui/menus.c:216
-#, fuzzy
 msgid "_Paste"
-msgstr "Ielīmēt"
+msgstr "I_elīmēt"
 
 #: src/gtkui/menus.c:218 src/gtkui/menus.c:220
-#, fuzzy
 msgid "Select _All"
-msgstr "Iezīmēt visus"
+msgstr "Iezīmēt _visu"
 
 #: src/gtkui/menus.c:226
 msgid "_Rename"
@@ -1735,17 +1686,17 @@ msgid "stereo"
 msgstr "stereo"
 
 #: src/gtkui/ui_statusbar.c:106
-#, fuzzy, c-format
+#, c-format
 msgid "%d channel"
 msgid_plural "%d channels"
-msgstr[0] "%d kanāli"
+msgstr[0] "%d kanāls"
 msgstr[1] "%d kanāli"
-msgstr[2] "%d kanāli"
+msgstr[2] "%d kanālu"
 
 #: src/gtkui/ui_statusbar.c:121
-#, fuzzy, c-format
+#, c-format
 msgid "%d kbps"
-msgstr "kbps"
+msgstr "%d kbps"
 
 #: src/hotkey/gui.c:71
 msgid "Previous Track"
@@ -1967,12 +1918,11 @@ msgstr "Notiek augšupielāde..."
 
 #: src/mtp_up/mtp.c:310
 msgid "Upload to MTP Device"
-msgstr ""
+msgstr "Augšupielādēt uz MTP ierīci"
 
 #: src/mtp_up/mtp.c:311
-#, fuzzy
 msgid "Disconnect MTP Device"
-msgstr "Atvienot ierīci"
+msgstr "Atvienot MTP ierīci"
 
 #: src/null/null.c:64
 msgid "Null output plugin "
@@ -2964,9 +2914,8 @@ msgid "<b>_Skin</b>"
 msgstr "<b>_Apdare</b>"
 
 #: src/skins/skins_cfg.c:394
-#, fuzzy
 msgid "Interface Preferences"
-msgstr "Crossfade iestatījumi"
+msgstr "Saskarnes iestatījumi"
 
 #: src/skins/ui_equalizer.c:330
 msgid "Preamp"
@@ -3033,9 +2982,9 @@ msgid "surround"
 msgstr "ieskaušana"
 
 #: src/skins/ui_main.c:806
-#, fuzzy, c-format
+#, c-format
 msgid "Seek to %d:%-2.2d / %d:%-2.2d"
-msgstr "Pārlekt uz:%d:%-2.2d/%d:%-2.2d (%d%%)"
+msgstr "Pāriet uz %d:%-2.2d / %d:%-2.2d"
 
 #: src/skins/ui_main.c:827
 #, c-format
@@ -3350,9 +3299,8 @@ msgid "Interface"
 msgstr "Saskarne"
 
 #: src/skins/ui_manager.c:245
-#, fuzzy
 msgid "Interface Preferences ..."
-msgstr "Crossfade iestatījumi"
+msgstr "Saskarnes iestatījumi ..."
 
 #: src/skins/ui_manager.c:249
 msgid "Add Internet Address..."
@@ -3894,7 +3842,6 @@ msgstr ""
 "Komanda, ko palaist, kad nomainās dziesmas nosaukums (piem., tīkla plūsmas)."
 
 #: src/song_change/song_change.c:480
-#, fuzzy
 msgid ""
 "You can use the following format strings which\n"
 "will be substituted before calling the command\n"
@@ -3916,17 +3863,17 @@ msgstr ""
 "pirms komandas izsaukšanas tiks aizvietotas\n"
 "(ne visas ir derīgas repertuāra-beigas komandai).\n"
 "\n"
-"%F: Frekvence (hercos)\n"
-"%c: Kanālu skaits\n"
+"%F: frekvence (hercos)\n"
+"%c: kanālu skaits\n"
 "%f: faila nosaukums (pilns ceļš)\n"
 "%l: ilgums (milisekundēs)\n"
-"%n vai %s: Dziesmas nosaukums\n"
-"%r: Ātrums (bitos sekundē)\n"
-"%t: Repertuāra pozīcija (%02d)\n"
-"%p: Pašreiz atskaņo (1 vai 0)\n"
-"%a: Izpildītājs\n"
-"%b: Albums\n"
-"%r: Celiņa nosaukums"
+"%n vai %s: dziesmas nosaukums\n"
+"%r: ātrums (bitos sekundē)\n"
+"%t: repertuāra pozīcija (%02d)\n"
+"%p: pašreiz atskaņo (1 vai 0)\n"
+"%a: izpildītājs\n"
+"%b: albums\n"
+"%T: celiņa nosaukums"
 
 #: src/song_change/song_change.c:507
 msgid ""
@@ -4052,9 +3999,8 @@ msgid "Tone Generator: "
 msgstr "Toņa ģenerators: "
 
 #: src/unix-io/gtk.c:34
-#, fuzzy
 msgid "About File I/O Plugin"
-msgstr "Par OSS4 spraudni"
+msgstr "Par File I/O spraudni"
 
 #: src/vorbis/configure.c:31
 msgid "Override generic titles"
