--- a/po/lt.po
+++ b/po/lt.po
@@ -1701,6 +1701,7 @@ msgid "%d channel"
 msgid_plural "%d channels"
 msgstr[0] "%d kanalas"
 msgstr[1] "%d kanalai"
+msgstr[2] "%d kanalai"
 
 #: src/gtkui/ui_statusbar.c:121
 #, c-format
