--- a/po/lt.po
+++ b/po/lt.po
@@ -1,16 +1,18 @@
 # Lithuanian translation for Audacious Plugins
-# Copyright (C) Audacious Translators
+# Copyright (C) Audacious translators
 # This file is distributed under the same license as the Audacious Plugins package.
 #
 # Translators:
 # Algimantas Margevičius <gymka@mail.ru>, 2011.
+# Algimantas Margevičius <margevicius.algimantas@gmail.com>, 2011.
+# gymka <gymka@mail.ru>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://jira.atheme.org/browse/AUDPLUG\n"
-"POT-Creation-Date: 2011-10-19 21:37-0400\n"
-"PO-Revision-Date: 2011-10-20 10:05+0000\n"
-"Last-Translator: Algimantas Margevičius <gymka@mail.ru>\n"
+"POT-Creation-Date: 2011-10-24 16:38-0400\n"
+"PO-Revision-Date: 2011-11-08 09:15+0000\n"
+"Last-Translator: gymka_ltu <margevicius.algimantas@gmail.com>\n"
 "Language-Team: Lithuanian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +27,7 @@ msgid ""
 "FAAD2 AAC/HE-AAC/HE-AACv2/DRM decoder (c) Nero AG, www.nero.com\n"
 "Copyright (c) 2005-2006 Audacious team"
 msgstr ""
-"Dekodavimui  naudojamas libfaad2-%s.\n"
+"Dekodavimui naudojamas libfaad2-%s.\n"
 "FAAD2 AAC/HE-AAC/HE-AACv2/DRM dekoderis (c) Nero AG, www.nero.com\n"
 "Copyright (c) 2005-2006 Audacious team"
 
@@ -141,7 +143,7 @@ msgstr "Pasirinkite dienas kuriomis žadinti"
 #: src/alarm/interface.c:562 src/alarm/interface.c:610
 #: src/alarm/interface.c:658 src/alarm/interface.c:706
 #: src/alarm/interface.c:754 src/alarm/interface.c:802
-#: src/alarm/interface.c:850 src/OSS/configure.c:153
+#: src/alarm/interface.c:850 src/bs2b/plugin.c:198 src/OSS/configure.c:153
 #: src/skins/ui_manager.c:450 src/skins/ui_manager.c:471
 msgid "Default"
 msgstr "Numatytasis"
@@ -1057,6 +1059,22 @@ msgstr "Išsiliejimo sritis: Pagal spalvas"
 #: src/blur_scope/config.c:83 src/jack/configure.c:106
 msgid "Options:"
 msgstr "Pasirinktys:"
+
+#: src/bs2b/plugin.c:157
+msgid "Bauer stereophonic-to-binaural Preferences"
+msgstr "Bauer stereofoninis-į-binaural nustatymai"
+
+#: src/bs2b/plugin.c:168
+msgid "Feed level:"
+msgstr "Duoti lygį:"
+
+#: src/bs2b/plugin.c:182
+msgid "Cut frequency:"
+msgstr "Nukirpti dažnius:"
+
+#: src/bs2b/plugin.c:196
+msgid "Presets:"
+msgstr "Nustatymų rinkiniai:"
 
 #: src/cdaudio-ng/cdaudio-ng.c:241
 msgid "About Audio CD Plugin"
@@ -3015,7 +3033,7 @@ msgstr "Sumaišo sąrašą."
 
 #: src/skins/ui_manager.c:311
 msgid "Reverse List"
-msgstr "Apverčia sąrašą"
+msgstr "Apversti sąrašą"
 
 #: src/skins/ui_manager.c:312
 msgid "Reverses the playlist."
@@ -3278,10 +3296,10 @@ msgid ""
 "expressions work, simply insert a literal portion of what you're searching "
 "for."
 msgstr ""
-"Pasirink įrašus grojaraštyje užpildydamas vieną ar kelis langelius. "
-"Langeliai naudoja regular expressions sintaksę, raidžių lygis nesvarbus. Jei"
-" nežinai kaip veikia regular expressions, paprasčiausiai įrašyk paraidžiui "
-"tai ko ieškai."
+"Surask ir pasirink įrašus grojaraštyje užpildydamas vieną ar kelis "
+"laukelius. Laukeliai naudoja reguliariųjų išraiškų sintaksę, raidžių lygis "
+"nesvarbus. Jei nežinai kaip veikia reguliariosios išraiškos, paprasčiausiai "
+"įrašyk paraidžiui tai ko ieškai."
 
 #: src/skins/ui_playlist.c:260
 msgid "Title: "
@@ -3301,15 +3319,15 @@ msgstr "Failo vardas:"
 
 #: src/skins/ui_playlist.c:289
 msgid "Clear previous selection before searching"
-msgstr "Išvalyti buvusius pasirinkimus prieš ieškant"
+msgstr "Prie ieškant, išvalyti buvusius pasirinkimus"
 
 #: src/skins/ui_playlist.c:292
 msgid "Automatically toggle queue for matching entries"
-msgstr "Automatiškai perjungti eilę atitinkantiems įrašam"
+msgstr "Atitinkantiems įrašams automatiškai perjungti eilę"
 
 #: src/skins/ui_playlist.c:295
 msgid "Create a new playlist with matching entries"
-msgstr "Sukuria naują grojaraštį iš surastų įrašų"
+msgstr "Iš surastų įrašų sukurti naują grojaraštį"
 
 #: src/skins/ui_playlist.c:762
 msgid "Audacious Playlist Editor"
